Fixed chat layout on tablets

--- a/public/blocks/chat/chat.scss
+++ b/public/blocks/chat/chat.scss
@@ -38,7 +38,6 @@
     flex: 1;
     display: flex;
     flex-flow: column;
-    justify-content: stretch;
     overflow: auto;
   }
 
@@ -111,6 +110,13 @@
   }
 }
 
+@media only screen and (max-width: $breakpoint-1000) {
+  .chat {
+    overflow-y: hidden;
+    max-height: calc(100vh - 100px);
+  }
+}
+
 @media only screen and (max-width: $breakpoint-phone) {
   .chat {
     position: fixed;
@@ -118,6 +124,7 @@
     bottom: 0;
     transform: translateX(100%);
     z-index: 10;
+    max-height: none;
 
     &_active {
       transform: translateX(0);
